# yolov8-ros

./: .bashrc  Dockerfile  build.bash  join.bash  run.bash
yolov8-ros/: CMakeLists.txt  package.xml  setup.py
yolov8-ros/src/: mask_ros.py
